--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -17,6 +17,7 @@ aside{
 aside img{
     width: 100%;
     height: 100%;
+    border-radius: 20%;
 }
 
 article *{
@@ -27,9 +28,11 @@ article *{
     text-align: left;
 }
 
-footer{
+footer *{
     clear:both;
     text-align: center;
+    background-color: #130204;
+    color: #DD2D4A;
 }
 
 header nav h1{
@@ -46,4 +49,8 @@ header *{
     text-align: center;
 }
 
+article{
+    border-color: #573280;
+    border: 10px;
+}
 
