--- a/css/coloreshover.css
+++ b/css/coloreshover.css
@@ -24,4 +24,11 @@
 
 .style_prevu_kit:hover{
     box-shadow: 0px 0px 150px #000000;
+    z-index: 2;
+    -webkit-transition: all 200ms ease-out;
+    -webkit-transform: scale(1.5);
+    -ms-transition: all 200ms ease-out;
+    -ms-transform: scale(1.5);
+    -moz-transition: all 200ms ease-out;
+    -moz-transform: scale(1.5);
 }
