--- a/css/algoritmiareglas.css
+++ b/css/algoritmiareglas.css
@@ -55,7 +55,7 @@ input.problema-input{
     border-bottom: 2px solid rgb(0,117,255);
 }
 
-border.problema-button{
+button.problema-button{
     border: none;
     background-color: rgb(0,117,255);
     color: white;
